bevel modifier material assignment unpredictable #34664

Closed
opened 2013-03-17 12:01:07 +01:00 by sarazin jean francois · 9 comments

%%%--- Operating System, Graphics card ---
Win 7 Geforce 465

- Blender version with error, and version that worked ---

Official 2.66 and and daily 55349 have the same behavior.

- Short description of error ---

When you applied a bevel modifier to an object, and you have two different materials on each side of the beveled edge, the new beveled faces won't have all the same material.
Maybe we could have a material index slot in the modifier, so we can choose to assign an exact material to the new beveled faces.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

just open the scene, it has a very simple object set up.

%%%

%%%--- Operating System, Graphics card --- Win 7 Geforce 465 - Blender version with error, and version that worked --- Official 2.66 and and daily 55349 have the same behavior. - Short description of error --- When you applied a bevel modifier to an object, and you have two different materials on each side of the beveled edge, the new beveled faces won't have all the same material. Maybe we could have a material index slot in the modifier, so we can choose to assign an exact material to the new beveled faces. - Steps for others to reproduce the error (preferably based on attached .blend file) --- just open the scene, it has a very simple object set up. %%%

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%The current code tries to find the 'closest' existing face and assign the material from that. This is admittedly ambiguous when the bevel has an odd number of segments.

I'm not sure that just putting a material index helps though: that only seems useful when all the faces around the bevel already have the same material (in which case current code will work), else the beveled edges stick out with a different material (I guess that's sometimes what is wanted, but seems rare to me).
%%%

%%%The current code tries to find the 'closest' existing face and assign the material from that. This is admittedly ambiguous when the bevel has an odd number of segments. I'm not sure that just putting a material index helps though: that only seems useful when all the faces around the bevel already have the same material (in which case current code will work), else the beveled edges stick out with a different material (I guess that's sometimes what is wanted, but seems rare to me). %%%

%%%This material index will be used only if the user check it. The behaviour will be the same as the solidify modifier. The solidify modifier have an option to specify the material for the new faces.
I think it is useful for mechanical modeling. I often have a material on a side, and another on the other side, and I need to know which material will be used on the beveled faces.

I don't get "the closest" existing face, you mean in world space? Or closest in the face list?%%%

%%%This material index will be used only if the user check it. The behaviour will be the same as the solidify modifier. The solidify modifier have an option to specify the material for the new faces. I think it is useful for mechanical modeling. I often have a material on a side, and another on the other side, and I need to know which material will be used on the beveled faces. I don't get "the closest" existing face, you mean in world space? Or closest in the face list?%%%

Added subscriber: @Sergey

Added subscriber: @Sergey

@howardt, what would be the plan here?

@howardt, what would be the plan here?
Member

This is a feature request. It is easy to do, just copy the UI from solidify modifier for specifying a material index for newly generated faces, and pass that through as a new parameter to the main bevel routine. I don't want to do this so close to a release, so wait until after the current release to do this.

This is a feature request. It is easy to do, just copy the UI from solidify modifier for specifying a material index for newly generated faces, and pass that through as a new parameter to the main bevel routine. I don't want to do this so close to a release, so wait until after the current release to do this.

This issue was referenced by 70453c578d

This issue was referenced by 70453c578dcdce5577015e1cd7be99d1b810215d
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 70453c578d.

Closed by commit 70453c578d.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34664
No description provided.