release/scripts/startup/bl_ui/properties_data_modifier.py
@@ -127,6 +127,7 @@ class DATA_PT_modifiers(ModifierButtonsPanel, Panel):
         col.prop(md, "width")
         col.prop(md, "segments")
         col.prop(md, "profile")
+        col.prop(md, "material")
 
         col = split.column()
         col.prop(md, "use_only_vertices")
